# ProcessingService

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/api/: app.py  main.py
src/api/routes/: __init__.py  auth.py  healthcheck.py  receiver.py  user.py
src/config/: config.py  settings.py
src/config/files/: example.yaml
src/database/: base.py  session.py
src/models/: __init__.py  reciever.py  user.py
src/schema/: __init__.py  base.py  receiver.py  user.py
src/scripts/: admin.py  populate.py
src/services/auth/: __init__.py  base.py  schemas.py
src/services/receivers/: __init__.py  actions.py  schemas.py
src/services/users/: __init__.py  actions.py
